# fastapi

./: Dockerfile  model.sav  pyproject.toml
app/: main.py
